# ideology-backend

./: .env  Cargo.toml
migrations/2021-12-31-033814_create_homepage_text/: down.sql  up.sql
migrations/2021-12-31-235913_create_account/: up.sql
migrations/2022-01-01-051427_create_user_session/: up.sql
src/: cors.rs  main.rs
src/controllers/: auth_controller.rs  input_processing.rs  mod.rs  text_controller.rs  validation.rs
src/controllers/dto/: mod.rs
src/db/: account_repository.rs  homepage_text_repository.rs  mod.rs  schema.rs  user_session_repository.rs
src/db/model/: account_model.rs  homepage_text_model.rs  mod.rs  user_session_model.rs
