[package]
name = "homepage-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "uuidv07"] }
rocket = {version = "0.5.0-rc.1", features = ["json"]}
dotenv = "0.15.0"
argon2 = "0.3.2"
rand_core = { version = "0.6", features = ["std"] }
uuid = {version = "0.7", features = ["v4", "serde"] }
jsonwebtoken = "7.2.0"
serde = {version = "1.0.132", features = ["derive"]}